# ai-resume-matcher

./: .dockerignore  .env.docker.sample  .env.example  .gitignore  Dockerfile  Procfile  README.md  demo.md  docker-compose.yml  package-lock.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  vercel-build.txt  vercel.json
.github/workflows/: tests.yml  tracking.yml
backend/: .env.example  Dockerfile  Dockerfile.mcp  __main__.py  config.py  database.py  db_helpers.py  encryption.py  fastmcp_server.py  job_url_scraper.py  main.py  pyproject.toml  render_start.sh  requirements-railway.txt  requirements.txt  run.py  start.sh
backend/agent/: email_tracker.py  graph.py  llm.py  mcp_client.py  nodes.py  prompts.py  resume_parser.py  state.py  tailor.py
backend/api/: index.py
backend/tests/: README.md  run_tests.py  test_unit.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  vite-env.d.ts
frontend/src/components/: Applications.tsx  Dashboard.tsx  ResumeSetup.tsx  Settings.tsx  TrackApplications.tsx
frontend/src/pages/: Home.tsx
